# agentic-browser

./: .gitignore  README.md  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
agents/: react_agent.py
clients/browser-extension/: env.d.ts  package.json  wxt.config.ts
clients/browser-extension/entrypoints/: background.ts  content.ts
clients/browser-extension/entrypoints/popup/: index.html  popup.css  popup.tsx
clients/browser-extension/entrypoints/sidepanel/: AgentExecutor.tsx  App.css  App.tsx  index.html  index.tsx  main.tsx
clients/browser-extension/entrypoints/utils/: executeActions.ts  executeAgent.ts  parseAgentCommand.ts  serverState.ts  websocket-client.ts
clients/browser-extension/entrypoints/voice-setup/: VoiceSetup.tsx  index.html  main.tsx  style.css
clients/debug-web/: .gitignore  index.html  package.json  vite.config.ts
clients/debug-web/src/: App.tsx  main.tsx  router.tsx  styles.css
clients/debug-web/src/components/: ChatPanel.tsx  DashboardPanel.tsx  MaintenancePanel.tsx  MemoryGraph.tsx  MemoryInitModal.tsx  MemoryPanel.tsx  RunsPanel.tsx  SettingsPanel.tsx
clients/debug-web/src/lib/: api.ts
clients/shared/: package.json
clients/shared/src/api/: index.d.ts  index.ts
clients/shared/src/markdown/: index.d.ts  index.ts  renderer.tsx  use-markdown.tsx
clients/shared/src/query/: client.ts  hooks.ts  index.d.ts  index.ts  keys.ts
clients/shared/src/settings-ui/: components.tsx  index.d.ts  (+1 more)
clients/telegram-bot/: .env.example  README.md  backend.py  bot.py  config.py  handlers.py  store.py
core/: config.py  llm.py  voice_pipeline.py
debug/src/components/: ChatPanel.tsx  SettingsPanel.tsx
debug/src/lib/: api.ts
extension/entrypoints/sidepanel/: AgentExecutor.tsx  App.tsx
routers/: file_upload.py  integrations.py  skills.py  voice.py
services/: react_agent_service.py  secrets_service.py  skills_service.py  telegram_bot_runner.py
tools/google_search/: seach_agent.py
(+30 files in other folders)
