[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gitingest>=0.3.1",
    "html2text>=2025.4.15",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.20",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "python-dotenv>=1.1.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.3",
    "mcp>=1.2.0",
    "requests>=2.32.3",
    "pycryptodome>=3.23.0",
    "googlesearch-python>=1.3.0",
    "langgraph>=1.0.1",
    "langchain-tavily>=0.2.14",
    "faster-whisper>=1.2.1",
    "yt-dlp>=2026.3.3",
    "google-genai>=1.2.0",
    "google-generativeai>=0.3.2",
    # ── Memory system ──────────────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29",
    "neo4j>=5.20",
    "opensearch-py>=2.6",
    "pdfminer-six>=20221105",
    "python-docx>=1.1",
    "numpy>=1.26",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "google-auth>=2.29",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.125",
    "composio>=0.8.0",
    "langchain-mcp-adapters>=0.1.0",
    "pandas>=3.0.2",
    "openpyxl>=3.1.5",
    "markitdown>=0.1.5",
    "pillow>=12.2.0",
]

[project.scripts]
agentic-api-run = "main:run"
agentic-mcp = "mcp_server.server:run"

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = [
    "agents*",
    "core*",
    "memory*",
    "mcp_server*",
    "models*",
    "migrations*",
    "prompts*",
    "routers*",
    "services*",
    "tools*",
    "utils*",
]
